MainFile refactored pathname on relative added nested static class Position in class Organisation, also changed constructors and inner fields of class. Refactored ResumeTestData: removed temp variables, creating classes only with help of constructors